[package]
name = "ds"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "1.3.1"
tonic = "0.11.0"
prost = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.11.0"
